kubectl/namespace/default/echoserver-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-echo
spec:
  podSelector:
    matchLabels:
      app: echo-app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
